--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,7 @@
     "skipLibCheck": true
   },
   "include": [
-    "src/**/*"
-, "index.js", "src/server.ts", "src/main.tsx"  ],
+    "src/**/*", "index.js", "src/server.ts"],
   "exclude": [
     "node_modules"
   ]
