--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "skipLibCheck": true
   },
   "include": [
-    "src/**/*", "index.js", "src/server.ts"],
+    "src/**/*", "index.js", "server.ts"],
   "exclude": [
     "node_modules"
   ]
