--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
+    "axios": "^1.6.8",
+    "csv-writer": "^1.6.0",
     "esbuild": "^0.21.2",
     "esbuild-node-tsc": "^2.0.5",
     "nodemon": "^3.1.0",
